packages/typ/tests/fixtures/diagnostics/0015_core_not_int_02.ml.expected
File "0015_core_not_int_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0015_core_not_int_02 is not a valid module name.

File "0015_core_not_int_02.ml", line 2, characters 14-15:
2 | let bad = not 0
                  ^
Error: The constant 0 has type int but an expression was expected of type
         bool
